# backend-go/docs/swagger.json
@@ -2602,6 +2602,12 @@
                     "description": "\"user\" | \"assistant\"",
                     "type": "string"
                 },
+                "transactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.SavedTransaction"
+                    }
+                },
                 "user_id": {
                     "type": "integer"
                 }
